--- a/task_2.1/src/css/style.css
+++ b/task_2.1/src/css/style.css
@@ -33,16 +33,20 @@ body {
 }
 
 .card__img-shadow img {
-  width: 100%;
-  height: 220px;
+  max-width: 100%;
+  width: auto;
+  height: 100%;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 16px 16px 0px 0px;
+  object-fit: cover;
 }
 
 .card__img img {
-  width: 100%;
+  max-width: 100%;
+  width: auto;
   height: 284px;
   border-radius: 16px 16px 0px 0px;
+  object-fit: cover;
 }
 
 .card__status {
@@ -118,6 +122,7 @@ body {
 .list__times {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   margin-top: 9px;
 }
 
@@ -172,5 +177,8 @@ body {
   text-decoration: none;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 476px) {
+  .card__img img {
+    height: 100%;
+  }
 }
